# auth-service

./: .env.example  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  wait-for-db.sh
alembic/: env.py
alembic/versions/: 00e007dca0ec_add_users_2.py  0d2e42eb0cd6_add_users.py  8c1a853c2510_add_created_at.py  9fa0e4c22ade_add.py  cbf5959bdb90_init.py  d5b79879712f_init.py
auth/: __main__.py
auth/config/: __init__.py  default.py  utils.py
auth/db/: __init__.py  alembic.ini
auth/db/connection/: session.py
auth/db/migrator/: env.py
auth/db/migrator/versions/: 78894385c1bd_create_user.py  b02849ea451d_add_true_users.py
auth/db/models/: __init__.py  auth.py
auth/endpoints/: __init__.py  auth.py  health_check.py
auth/exceptions/: auth.py
auth/schemas/: __init__.py
auth/schemas/auth/: login.py  signup.py  token.py
auth/services/: __init__.py  auth.py
