[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["dyussenov <dyusenov.aset.arm@gmail.com>"]
readme = "README.md"
packages = [ { include = "**/*.py", from = "."  }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
python-multipart = "^0.0.6"
pydantic-settings = "^2.0.2"
pydantic = {extras = ["email"], version = "^2.1.1"}
sqlalchemy = "^2.0.19"
sqlalchemy-utils = "^0.41.1"
uvicorn = "^0.23.1"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.6"
passlib = "^1.7.4"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
pydantic-extra-types = "^2.0.0"
phonenumbers = "^8.13.18"
wrapt = "^1.15.0"
isort = "^5.13.2"
black = "^23.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
